User login api, facebook and email.

--- a/src/main/webapp/admin/config.html
+++ b/src/main/webapp/admin/config.html
@@ -4,25 +4,23 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>参数配置</title>
-    <link href="../static/images/favicon.ico" type="image/x-icon" rel="icon">
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/bootstrap-switch.min.css" rel="stylesheet">
-    <link href="../static/css/font-awesome.min.css" rel="stylesheet">
-    <link href="../static/css/mengular.css" rel="stylesheet">
-    <link href="../static/css/admin/config.css" rel="stylesheet">
-    <script src="//cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <script src="../static/js/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
-    <script src="../static/js/jquery.bootstrap.min.js"></script>
-    <script src="../static/js/bootstrap-switch.min.js"></script>
-    <script src="../static/js/mengular.js"></script>
-    <script src="../dwr/engine.js"></script>
-    <script src="../dwr/interface/AdminManager.js"></script>
-    <script src="../dwr/interface/ConfigManager.js"></script>
-    <script src="../static/js/tools.js"></script>
-    <script src="../static/js/admin/config.js"></script>
+    <title>Config</title>
+    <link href="/static/images/favicon.ico" type="image/x-icon" rel="icon">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-switch.min.css" rel="stylesheet">
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/static/css/mengular.css" rel="stylesheet">
+    <link href="/static/css/admin/config.css" rel="stylesheet">
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/jquery.bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap-switch.min.js"></script>
+    <script src="/static/js/mengular.js"></script>
+    <script src="/dwr/engine.js"></script>
+    <script src="/dwr/interface/AdminManager.js"></script>
+    <script src="/dwr/interface/ConfigManager.js"></script>
+    <script src="/static/js/tools.js"></script>
+    <script src="/static/js/admin/config.js"></script>
 </head>
 <body>
 <div class="container">
