--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Tsukuba Mate</title>
     <meta name="keywords" content="Tsukuba Mate">
     <meta name="description" content="Tsukuba Mate">
     <meta name="author" content="MuShare Group">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Tsukuba Mate</title>
+    <link href="/static/images/favicon.ico" type="image/x-icon" rel="icon">
     <!-- animate -->
     <link rel="stylesheet" href="static/css/animate.min.css">
     <!-- bootstrap -->
@@ -21,6 +22,20 @@
     <link rel="stylesheet" href="static/css/jquery.fullPage.css">
     <!-- custom -->
     <link rel="stylesheet" href="static/css/templatemo-style.css">
+    <!-- jQuery -->
+    <script src="static/js/jquery.min.js"></script>
+    <!-- bootstrap -->
+    <script src="static/js/bootstrap.min.js"></script>
+    <!-- fullpage -->
+    <script src="static/js/jquery.fullPage.js"></script>
+    <!-- smoothScroll -->
+    <script src="static/js/smoothscroll.js"></script>
+    <!-- wow -->
+    <script src="static/js/wow.min.js"></script>
+    <!-- text rotater -->
+    <script src="static/js/jquery.simple-text-rotator.js"></script>
+    <!-- custom -->
+    <script src="static/js/custom.js"></script>
 </head>
 <body>
 <div id="fullpage">
@@ -43,7 +58,6 @@
         </div>
     </div>
     <!-- end home -->
-
     <!-- start work -->
     <div id="work" class="section">
         <div class="container">
@@ -98,7 +112,6 @@
         </div>
     </div>
     <!-- end work -->
-
     <!-- start about -->
     <div id="about" class="section">
         <div class="container">
@@ -137,7 +150,6 @@
         </div>
     </div>
     <!-- end about -->
-
     <!-- start portfolio -->
     <div id="portfolio" class="section">
         <div class="container">
@@ -194,7 +206,6 @@
         </div>
     </div>
     <!-- end portfolio -->
-
     <!-- start contact -->
     <div id="contact" class="section">
         <div class="container">
@@ -221,13 +232,13 @@
         </div>
     </div>
     <!-- end contact -->
-
     <!-- start footer -->
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-12 wow fadeIn" data-wow-delay="0.9s">
                     <p>Copyright &copy; 2015 - 2017 MuShare Group</p>
+                    <a href="http://www.miitbeian.gov.cn/" target="_blank">鄂ICP备15010075号-2</a>
                     <hr>
                     <ul class="social-icon">
                         <li><a href="#" class="fa fa-facebook"></a></li>
@@ -239,23 +250,6 @@
         </div>
     </footer>
     <!-- end footer -->
-
 </div>
-
-<!-- jQuery -->
-<script src="static/js/jquery.min.js"></script>
-<!-- bootstrap -->
-<script src="static/js/bootstrap.min.js"></script>
-<!-- fullpage -->
-<script src="static/js/jquery.fullPage.js"></script>
-<!-- smoothScroll -->
-<script src="static/js/smoothscroll.js"></script>
-<!-- wow -->
-<script src="static/js/wow.min.js"></script>
-<!-- text rotater -->
-<script src="static/js/jquery.simple-text-rotator.js"></script>
-<!-- custom -->
-<script src="static/js/custom.js"></script>
-
 </body>
 </html>
