--- a/src/main/webapp/admin/index.html
+++ b/src/main/webapp/admin/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>管理员登陆</title>
+    <title>Tsukuba Mate Admin</title>
     <link href="/static/images/favicon.ico" type="image/x-icon" rel="icon">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/font-awesome.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
     <div class="container">
         <label id="label" class="navbar-fixed-bottom">
             Copyright © 2003-2017 MuShare Group
-            <a href="http://www.miitbeian.gov.cn/" target="_blank">鄂ICP备13007511号</a>
+            <a href="http://www.miitbeian.gov.cn/" target="_blank">鄂ICP备15010075号-2</a>
         </label>
     </div>
 </div>
