Option list add, revise, active, remove and enable.

--- a/src/main/webapp/admin/categories.html
+++ b/src/main/webapp/admin/categories.html
@@ -85,6 +85,7 @@
                 <th>Identifier</th>
                 <th>Name</th>
                 <th>Icon</th>
+                <th>Selections</th>
                 <th>Rev</th>
                 <th>Enable</th>
                 <th>Active</th>
@@ -97,6 +98,7 @@
                 <td class="category-list-identifier">${identifier}$</td>
                 <td class="category-list-name"><i class="fa fa-lg fa-language text-primary"></i></td>
                 <td class="category-list-icon"><img src="${icon}$"/></td>
+                <td><a href="selections.html?cid=${cid}$"><i class="fa fa-lg fa-sliders text-success"></i></a></td>
                 <td class="category-list-rev">${rev}$</td>
                 <td class="category-list-enable"><input type="checkbox" data-size="mini" data-on-text="ON" data-off-text="OFF"></td>
                 <td class="category-list-active"><button class="btn btn-xs">${active}$</button></td>
