--- a/src/main/webapp/admin/head.html
+++ b/src/main/webapp/admin/head.html
@@ -7,7 +7,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul id="menu-bar" class="nav navbar-nav logined-btn">
-                <li><a href="categories.html">Category</a></li>
+                <li><a href="categories.html">Manage</a></li>
                 <li><a href="config.html">Config</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -19,6 +19,8 @@
 <script type="text/javascript">
     var map = {
         categories: 0,
+        selections: 0,
+        options: 0,
         config: 1
     }
     $("#menu-bar>li").eq(map[getPageFullName().split(".")[0]]).addClass("active");
