User avatar functions.

--- a/src/main/webapp/mail/password.html
+++ b/src/main/webapp/mail/password.html
@@ -94,7 +94,7 @@
     }
 </style>
 <div class="ui container">
-    <h2 id="app-name">Httper</h2>
+    <h2 id="app-name">Tsukuba eBuy</h2>
     <div id="message-content" class="ui card">
         <div class="content">
             <h4>Reset Your Password</h4>
@@ -102,7 +102,7 @@
         <hr>
         <div class="content">
             <h5>Dear #{username},</h5>
-            <h5>We send this mail to you, because you have sent a request for resetting your password of Httper.</h5>
+            <h5>We send this mail to you, because you have sent a request for resetting your password of Tsukuba eBuy.</h5>
             <h5>You can reset your password by clicking this button within 10 minutes.</h5>
             <a href="#{httpProtocol}://#{domain}/verification/#{vid}" class="ui submit button primary">Reset
                 Password</a>
