--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,31 +10,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tsukuba Mate</title>
     <link href="/static/images/favicon.ico" type="image/x-icon" rel="icon">
-    <!-- animate -->
     <link rel="stylesheet" href="static/css/animate.min.css">
-    <!-- bootstrap -->
     <link rel="stylesheet" href="static/css/bootstrap.min.css">
-    <!-- font-awesome -->
     <link rel="stylesheet" href="static/css/font-awesome.min.css">
-    <!-- google font -->
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,800' rel='stylesheet' type='text/css'>
-    <!-- fullpage -->
     <link rel="stylesheet" href="static/css/jquery.fullPage.css">
-    <!-- custom -->
     <link rel="stylesheet" href="static/css/templatemo-style.css">
-    <!-- jQuery -->
     <script src="static/js/jquery.min.js"></script>
-    <!-- bootstrap -->
     <script src="static/js/bootstrap.min.js"></script>
-    <!-- fullpage -->
     <script src="static/js/jquery.fullPage.js"></script>
-    <!-- smoothScroll -->
     <script src="static/js/smoothscroll.js"></script>
-    <!-- wow -->
     <script src="static/js/wow.min.js"></script>
-    <!-- text rotater -->
     <script src="static/js/jquery.simple-text-rotator.js"></script>
-    <!-- custom -->
     <script src="static/js/custom.js"></script>
 </head>
 <body>
@@ -233,22 +220,9 @@
     </div>
     <!-- end contact -->
     <!-- start footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 wow fadeIn" data-wow-delay="0.9s">
-                    <p>Copyright &copy; 2015 - 2017 MuShare Group</p>
-                    <a href="http://www.miitbeian.gov.cn/" target="_blank">鄂ICP备15010075号-2</a>
-                    <hr>
-                    <ul class="social-icon">
-                        <li><a href="#" class="fa fa-facebook"></a></li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
-                        <li><a href="#" class="fa fa-instagram"></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <div id="foot">
+        <script>$("#foot").load("/foot.html")</script>
+    </div>
     <!-- end footer -->
 </div>
 </body>
