--- a/src/main/webapp/password/overtime.html
+++ b/src/main/webapp/password/overtime.html
@@ -1,35 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="keywords" content="浮尘追梦, fczm, Meng Li, Httper, REST API, iOS">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="description" content="HTTPER, a REST API test tool for iOS device.">
+    <meta charset="utf-8">
+    <meta name="keywords" content="Tsukuba Mate">
+    <meta name="description" content="Tsukuba Mate">
+    <meta name="author" content="MuShare Group">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Verification Over Time</title>
-    <link rel="Shortcut Icon" href="/static/images/favicon.ico">
-    <link rel="stylesheet" href="/static/css/semantic.min.css">
-    <link rel="stylesheet" href="/static/css/resetPassword.css">
+    <link href="/static/images/favicon.ico" type="image/x-icon" rel="icon">
+    <link rel="stylesheet" href="/static/css/animate.min.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/font-awesome.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,800' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/static/css/jquery.fullPage.css">
+    <link rel="stylesheet" href="/static/css/templatemo-style.css">
     <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/jquery.fullPage.js"></script>
+    <script src="/static/js/smoothscroll.js"></script>
+    <script src="/static/js/wow.min.js"></script>
+    <script src="/static/js/jquery.simple-text-rotator.js"></script>
+    <script src="/static/js/custom.js"></script>
 </head>
 <body>
-<div class="ui hidden divider"></div>
-<div id="main-container" class="ui container">
-    <h2 class="ui header">
-        <img src="/static/images/logo.png" class="ui centered mini image rounded">
-        <div class="content">
-            <span>Httper</span>
-            <div class="sub header">Test your REST API anywhere</div>
+<div id="fullpage">
+    <div id="home">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
+                    <h3>Simple and Elegant</h3>
+                    <h1>Tsukuba Mate</h1>
+                    <h2>Verification Over Time</h2>
+                    <h4>Your request is invalidate or overtime. Please resend a email and try again.</h4>
+                    <a href="/" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Back to index</a>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
         </div>
-    </h2>
-    <h4 class="ui horizontal divider header red"><i class="wait icon"></i> Verification Over Time </h4>
-    <div class="ui raised segment red inverted">
-        <p>Your request is invalidate or overtime. Please resend a email and try again.</p>
     </div>
-    <a href="/" class="ui basic button fluid">Back to index</a>
-</div>
-<div class="ui hidden divider"></div>
-<div id="foot">
-    <script>$("#foot").load("/foot.html")</script>
+    <div id="foot">
+        <script>$("#foot").load("/foot.html")</script>
+    </div>
 </div>
 </body>
 </html>
