--- a/src/main/webapp/password/reset.html
+++ b/src/main/webapp/password/reset.html
@@ -1,50 +1,77 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="keywords" content="浮尘追梦, fczm, Meng Li, Httper, REST API, iOS">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="description" content="HTTPER, a REST API test tool for iOS device.">
+    <meta charset="utf-8">
+    <meta name="keywords" content="Tsukuba Mate">
+    <meta name="description" content="Tsukuba Mate">
+    <meta name="author" content="MuShare Group">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Reset Password</title>
-    <link rel="Shortcut Icon" href="/static/images/favicon.ico">
-    <link rel="stylesheet" href="/static/css/semantic.min.css">
+    <link href="/static/images/favicon.ico" type="image/x-icon" rel="icon">
+    <link rel="stylesheet" href="/static/css/animate.min.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/font-awesome.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,800' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/static/css/jquery.fullPage.css">
+    <link rel="stylesheet" href="/static/css/templatemo-style.css">
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/jquery.fullPage.js"></script>
+    <script src="/static/js/smoothscroll.js"></script>
+    <script src="/static/js/wow.min.js"></script>
+    <script src="/static/js/jquery.simple-text-rotator.js"></script>
+    <script src="/static/js/custom.js"></script>
     <script src="/dwr/engine.js"></script>
     <script src="/dwr/interface/VerificationManager.js"></script>
     <script src="/dwr/interface/UserManager.js"></script>
-    <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/mengular.js"></script>
     <script src="/static/js/password/reset.js"></script>
+    <style>
+        #reset-password {
+            background: transparent;
+            border: 2px solid #d6d6d6;
+            border-radius: 0;
+            box-shadow: none;
+            color: #ffffff;
+            margin-bottom: 20px;
+            height: 60px;
+        }
+
+        #reset-submit {
+            background: #D43F52;
+            border: 2px solid transparent;
+            color: #ffffff;
+            font-weight: bold;
+            transition: all 0.4s ease-in-out;
+            height: 50px;
+        }
+    </style>
 </head>
 <body>
-<div class="ui hidden divider"></div>
-<div class="ui container">
-    <h2 class="ui header">
-        <img src="/static/images/logo.png" class="ui centered mini image rounded">
-        <div class="content">
-            <span>Httper</span>
-            <div class="sub header">Test your REST API anywhere</div>
-        </div>
-    </h2>
-    <h4 class="ui horizontal divider header"><i class="lock icon"></i> Reset Password </h4>
-    <div class="ui piled segment">
-        <div id="reset-message">
-            <h4 class="ui header">Dear @{name},</h4>
-            <p>We have received your request to reset your password of Httper at @{createAt}.</p>
-            <p>Here, you can input your new password and submit it. Then you can use this new password to sign in.</p>
-        </div>
-        <div class="ui divider"></div>
-        <div class="ui form">
-            <div class="field">
-                <label>New password</label>
-                <input id="reset-password" type="text" placeholder="Input your new password here.">
+<div id="fullpage">
+    <div id="home">
+        <div class="container">
+            <div class="row">
+                <div id="reset-message" class="col-md-8 col-md-offset-2 wow fadeIn" data-wow-delay="0.5s">
+                    <h3>Simple and Elegant</h3>
+                    <h1>Tsukuba Mate</h1>
+                    <h2>Reset Password</h2>
+                    <h3>Dear @{name},</h3>
+                    <h4>We have received your request to reset your password of Tsukuba eBuy at @{createAt}. Here, you can input your new password and submit it. Then you can use this new password to sign in.</h4>
+                </div>
+                <br>
+                <div class="col-md-6 col-md-offset-3 wow fadeIn" data-wow-delay="0.9s">
+                    <input id="reset-password" class="form-control" type="text" placeholder="Input your new password here.">
+                    <button id="reset-submit" type="submit" class="form-control" >Submit</button>
+                </div>
             </div>
-            <button id="reset-submit" class="ui button basic fluid">Submit</button>
         </div>
     </div>
-</div>
-<div class="ui hidden divider"></div>
-<div id="foot">
-    <script>$("#foot").load("/foot.html")</script>
+    <div id="foot">
+        <script>$("#foot").load("/foot.html")</script>
+    </div>
 </div>
 </body>
 </html>
