--- a/src/main/webapp/mail/zh/welcome.html
+++ b/src/main/webapp/mail/zh/welcome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Reset Password</title>
+    <title>Sign up success</title>
     <link rel="Shortcut Icon" href="#{httpProtocol}://#{domain}/static/images/favicon.ico">
 </head>
 <body>
@@ -92,29 +92,45 @@
         text-decoration: none;
         font-size: 13px;
     }
+
+    #download img {
+        width: 150px;
+        display: block;
+        margin: 0 auto;
+    }
 </style>
 <div class="ui container">
-    <h2 id="app-name">Tsukuba eBuy</h2>
+    <h2 id="app-name">Httper</h2>
     <div id="message-content" class="ui card">
         <div class="content">
-            <h4>Reset Your Password</h4>
+            <h4>Welcome to Httper Cloud</h4>
         </div>
         <hr>
         <div class="content">
             <h5>Dear #{username},</h5>
-            <h5>We send this mail to you, because you have sent a request for resetting your password of Tsukuba eBuy.</h5>
-            <h5>You can reset your password by clicking this button within 10 minutes.</h5>
-            <a href="#{httpProtocol}://#{domain}/verification/#{vid}" class="ui submit button primary">Reset
-                Password</a>
-            <h5>If you cannot open it, please copy this link and open it in your browser: </h5>
-            <a href="#{httpProtocol}://#{domain}/verification/#{vid}">#{httpProtocol}://#{domain}/verification/#{vid}</a>
-            <h5>If you did not send such request, just ignore this mail.</h5>
+            <h5>Thank you for signing up Httper cloud! You can use your email #{email} to sign in.</h5>
+            <h5>With Httper cloud service, you can synchronize your request between multiple devices.</h5>
+            <h5>Here are some features of Httper:</h5>
+            <h5>1. Developers can submit a HTTP request with several headers, parameters and row request body by 9 different HTTP methods including GET, POST, HEAD, PUT, DELETE, CONNECT, OPTIONS, TRACE and PATCH. HTTP response can be shown as three styles including pretty, row and preview. Response status code and headers are also supported in Httper.</h5>
+            <h5>2. Supports to synchronize request history between multiple devices with your account signing in. Your request history can be synchronized from cloud in a new device if you sign in your account.</h5>
+            <h5>3. Some Internet tools are included in Httper:</h5>
+            <ul>
+                <li>Ping a domain or IP address.</li>
+                <li>Whois search.</li>
+                <li>Get device public IP info, WiFi info and cellular info.</li>
+            </ul>
+            <h5>We are developing project function which can manage your several requests in a project. The project can be shared with other people if you want.</h5>
+            <h5>If you any problem about this app, please submit issues on https://github.com/lm2343635/Httper/issues or send email to me(lm2343635@126.com). Httper is an open source software. If you like my app, please give me a star on Github: https://github.com/lm2343635/Httper</h5>
             <h5>Sincerely yours,</h5>
             <h5>MuShare Group</h5>
+            <div id="download">
+                <img src="#{httpProtocol}://#{domain}/static/images/qrcode.png">
+                <img src="#{httpProtocol}://#{domain}/static/images/appstore.png">
+            </div>
         </div>
     </div>
     <div id="footer">
-        <img src="#{httpProtocol}://#{domain}/static/images/logo.png" class="ui centered mini image rounded">
+        <img src="#{httpProtocol}://#{domain}/static/images/logo.png">
         <div class="link">
             <a class="item" href="#{httpProtocol}://#{domain}" target="_blank">MuShare Group © 2015 - 2017. All Rights
                 Reserved.</a>
